--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>E.A. Van Houten</h1>
 
-<p><a href="https://muartedvanhoutenb.weebly.com">My portfolio is neat.</a></p>
+<p><a href="https://muartedvanhoutenb.weebly.com" target="_blank">My portfolio is neat.</a></p>
