--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <h1>E.A. Van Houten</h1>
 
 <p><a href="https://muartedvanhoutenb.weebly.com" target="_blank">My portfolio is neat.</a></p>
+
+<h2>My Pesonal Mission, Vision and Values</h2>
+
+<p>Have you taken Jesus Christ as your Lord and Savior? Let me tell you about how I was saved.</p>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempus imperdiet nulla malesuada pellentesque. Egestas tellus rutrum tellus pellentesque eu. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim lobortis. A iaculis at erat pellentesque adipiscing commodo elit at. Risus sed vulputate odio ut enim blandit. Enim nunc faucibus a pellentesque sit amet porttitor. Dictumst quisque sagittis purus sit amet volutpat consequat. Egestas sed tempus urna et. In fermentum et sollicitudin ac orci phasellus egestas tellus rutrum. Suscipit tellus mauris a diam. Risus pretium quam vulputate dignissim suspendisse in est ante in. Adipiscing elit duis tristique sollicitudin nibh sit.</p>
+
+<p>Tincidunt vitae semper quis lectus nulla at volutpat diam ut. In aliquam sem fringilla ut morbi tincidunt augue. Vitae ultricies leo integer malesuada nunc vel. Cras ornare arcu dui vivamus arcu felis. Ornare lectus sit amet est placerat in. Purus sit amet luctus venenatis lectus magna fringilla. Molestie nunc non blandit massa. Sodales ut eu sem integer. Enim ut sem viverra aliquet. Dui faucibus in ornare quam viverra orci sagittis. Vel eros donec ac odio. Eget velit aliquet sagittis id consectetur. Nullam non nisi est sit amet facilisis magna etiam tempor. Elementum curabitur vitae nunc sed.</p>
