--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
+<style>
+  body {
+    padding-left: 20%;
+    padding-right: 20%;
+  }
+  </style>
+
 <h1>E.A. Van Houten</h1>
 
 <p><a href="https://muartedvanhoutenb.weebly.com" target="_blank">My portfolio is neat.</a></p>
 
-<h2>My Pesonal Mission, Vision and Values</h2>
+<h2>My Personal Mission, Vision and Values</h2>
 
 <p>Have you taken Jesus Christ as your Lord and Savior? Let me tell you about how I was saved.</p>
 
