--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>E.A.Van Houten</title>
+  <title>Elizabeth (Beth) Van Houten, M. Ed.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
-    /* Remove the navbar's default margin-bottom and rounded borders */ 
+    body {
+      font-family: 'Quattrocento Sans', sans-serif;
+    }
+    p {
+      font-size: 1.5em;
+    }
+    /* Remove the navbar's default margin-bottom and rounded borders */
     .navbar {
       margin-bottom: 0;
       border-radius: 0;
+      font-family: 'Quattrocento Sans', sans-serif;;
+      background-color: #7e956d;
+    }
+    .navbar-brand {
+      padding-right: 5em;
+      color: #ffffff;
     }
 
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -51,7 +65,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#">Elizabeth (Beth) Van Houten, M. Ed.</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -61,7 +75,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="https://muartedvanhoutenb.weebly.com"><span class="glyphicon glyphicon-Link"></span> Portfolio</a></li>
       </ul>
     </div>
   </div>
@@ -75,18 +89,57 @@
       <p><a href="#">Link</a></p>
     </div>
     <div class="col-sm-8 text-left">
-      <h1>Welcome</h1>
+    <h1>Welcome</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <hr>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
+      <h3>Resume</h3>
+      <p>Licensure Ohio 5-year professional license (7-12 English), expires June 30, 2025</p>
+
+      <p>Education Master of Education with an emphasis in Literacy Education, graduated May 2019 University of Missouri at Columbia Master&rsquo;s thesis: Using Inquiry Learning in the Classroom: A Professional Development Module for  Teachers <https://muartedvanhoutenb.weebly.com/></p>
+
+      <p>Bachelor of Arts with an emphasis in English Education, graduated December 1990 Capital University, Columbus, Ohio</p>
+
+      <p>Skills Competent writer, editor, and educator in the areas of reading, writing, language, mathematics, and history content, skill development, and assessment strategies aligned to current pedagogy Skilled in content authoring, metadata tagging, and standards alignment</p>
+
+      <p>Employment 2010&ndash;2020  academic designer/editor McGraw-Hill School Education, OH</p>
+
+      <p> &bull; Analyzed Common Core and state-specific standards to identify curriculum development and revision needs.  &bull; Developed and edited print and digital content for Wonders, Open Court Reading, SRA FLEX Literacy, Number Worlds, and Reading Labs.  &bull; Wrote prototypes for Open Court Reading Texas Test Preparation and Practice, grades 1-5  &bull; Served as a specialist in publishing needs for English Learners  &bull; Co-authored Academic Design Style Guide revision, style guide used by former SRA editorial staff, incorporating revisions in most recent edition of Chicago Manual of Style, as well as recent digital content issues and issues of cultural sensitivity and academic integrity  &bull; Created 48 interdisciplinary project-based learning units for intervention classrooms based on UbD structure, with author input from Doug Fisher, Jay McTighe, and Dinah Zike.  &bull; Collaborated with Jay McTighe in developing the prototypes for FLEX Literacy, attended Understanding by Design Summer Workshop for further training</p>
+
+      <p>2007-2010 assessment coordinator Kaskaskia College, IL</p>
+
+      <p> &bull; Organized and developed assessment data collection; designed standardized digital form for data collection, with input from teaching staff  &bull; Trained teaching staff in classroom assessment techniques, built a meaningful assessment culture into all instruction  &bull; Developed more effective assessment data collection strategies throughout the college  (worked individually with 80-100 faculty members each year)  &bull; Coordinated AQIP Continuous Improvement Process: conducted information collection and writing of re-accreditation documentation for KC  &bull; Critical Friends protocol training  &bull; Strategic Planning process: Planned the three annual meetings for the strategic planning process; documented revisions and oversaw publishing of the strategic plan each year  &bull; Conducted professional development: Presented at New Employee Orientations to share understanding of continuous improvement process and assessment processes  &bull; Presented at Title III Workshop on AQIP, assessment, and reaching struggling learners  &bull; Guest speaker at teacher education classes on diversity issues</p>
+
+      <p>2005&ndash;2007 St. Elmo Jr./Sr. High School, IL</p>
+
+      <p> &bull; Taught English/ELA grades 9, 10, 12, and Advanced Composition  &bull; Developed curriculum for Advanced Composition to teach both journalism and writing for college (students wrote for the town paper and developed college/scholarship applications and essays)  &bull; Co-taught with Intervention Specialist to accommodate high ratio of students with IEPs  &bull; Served as sole teacher of ELA in grades 9, 10, &amp; 12 in rural community</p>
+
+      <p>1991&ndash;2005  English instructor  Whitehall-Yearling High School, OH     &bull; Taught English/ELA 9, 10, 11, &amp; 12; Gifted and Talented (EACH) 9 &amp; 10; AP English Literature 12; Honors Comparative Literature 11, and The Research Process  &bull; Chaired English department responsible for supervision of ten-member department; development and implementation of curriculum; improvement of classroom teaching and assessment; and managing budget, inventory, and supplies  &bull; Served as high school mentor coordinator to support and guide staff in training and implementation of entry year program, induction of new teachers, coaching and training mentors in observation and communication skills  &bull; Represented Whitehall City Schools at Central Ohio RPDC Lead Mentor Network, a regional mentor program problem solving, training, and policy development  &bull; Served as curriculum development committee member 1995, 2000, and 2005 K&ndash;12 language arts curriculum revisions  &bull; Participated in Continuous Improvement Plan committee planning for high school improvements in the areas of language arts, mathematics, and community involvement  &bull; Co-authored A Writer&rsquo;s Style Manual and Proficiency Guide for use by district students and staff grades 7-12   &bull; Tutored 10-12th grade students in all levels of mathematics for the state graduation test (general arithmetic and computation, units of measure, algebra, geometry, decoding and dissecting story problems, and choosing approaches for solving problems) Excellent pass rate among my tutoring students</p>
+
+      <p> Additional Experiences 2020 volunteer interviewer/biography writer American Field Service (international exchange program)</p>
+
+      <p> &bull; wrote bios for students hoping to be placed with families for study abroad in US  &bull; tagged metadata for better searchability  &bull; conducted student interviews for US State Department NIFDI scholarships for study abroad  &bull; wrote recommendations and analysis of interview observations</p>
+
+      <p>2001&ndash;2003 proofreader/production Suburban News/CM Media</p>
+
+      <p> &bull; Proofread ad copy and customer/sales layout requests  &bull; Production of ads, pagination, and archiving  &bull; Developed basic skills in Quark Express and Photoshop (CM Media closed in 2015)</p>
+
+      <p>Summer 2001 National Endowment for the Humanities teacher-scholar  20th Century American Women Authors University of Kansas at Lawrence</p>
+
+      <p> &bull; Participated in summer seminar on Willa Cather and Edith Wharton  &bull; Visited Willa Cather archives in Red Cloud, NE and conducted research on author</p>
+
+      <p>Summer 1997 Volunteer technical writer and interpretation ranger Great Sand Dunes National Park</p>
+
+      <p> &bull; Park service created job based on skills I had to offer  &bull; Compiled recent research into accessible resource for the interpretive staff   &bull; Worked when needed at the visitor&rsquo;s desk, assigning campground passes and informing backcountry campers of the dangers and risks of the park  &bull; Performed clerical and park restoration tasks</p>
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
-        <p>ADS</p>
+          <p>Columbus, Ohio 43229</p>
+          <p>(614) 315-1012</p>
+          <p><a href="mailto:"eavanhouten@att.net">email</a></p>
+          <p><a href="linkedin.com/in/easundermeyer">LinkedIn</a></p>
       </div>
       <div class="well">
-        <p>ADS</p>
+        <p>PHotos?</p>
       </div>
     </div>
   </div>
