--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       margin-bottom: 0;
       border-radius: 0;
       font-family: 'Quattrocento Sans', sans-serif;;
-      background-color: #7e956d;
+      background-color: #d8dfd3;
+      border: 0;
     }
     .navbar-brand {
       padding-right: 5em;
@@ -34,7 +35,7 @@
     /* Set gray background color and 100% height */
     .sidenav {
       padding-top: 20px;
-      background-color: #f1f1f1;
+      background-color: #ffffff;
       height: 100%;
     }
 
